# black-hole-sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: PHYSICS.md  RAYS.md
src/: camera.h  main.cpp  renderer.h  sim_params.h  vec3.h
src/renderers/: flat_schwarzschild.h  gr_schwarzschild.h
